--- a/src/main/resources/templates/comments.html
+++ b/src/main/resources/templates/comments.html
@@ -1,31 +1,36 @@
-<%@ taglib prefix="form" uri="http://www.springframework.org/tags/form" %>
-<%@ page contentType="text/html;charset=UTF-8" language="java" %>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta name="_csrf" content="${_csrf.token}"/>
     <meta name="_csrf_header" content="${_csrf.headerName}"/>
     <script src="http://code.jquery.com/jquery-2.2.4.js"
             type="text/javascript"></script>
     <script src="/js/common.js"></script>
-    <title>Homepage</title>
-    <style>
-        .clear {
-            clear: both;
-        }
-    </style>
+    <meta charset="UTF-8">
+    <title>Comments</title>
 </head>
 <body>
-<h1>Comments</h1>
-<div id="getComments"></div>
+<h1>Posts</h1>
+<form>
+    <p>
+        <br />
+        <textarea name="text_comment" cols="65" rows="6"></textarea>
+    </p>
+    <p>
+        <input type="submit" value="Отправить" />
+    </p>
+</form>
+<div id="getComments">
 
-
+</div>
 <script>
     var postId = 1;
 
     $(function() {
-        ajaxWrapper("/getComments", "GET", {post_id : postId}, function(data) {
+        ajaxWrapper("/comments/getComments", "GET", {post_id : postId}, function(data) {
             var $container = $("#getComments");
             for (var i in data) {
+                $container.append($("<p></p>").text(JSON.stringify(data[i].user.name.toString())));
                 $container.append($("<p></p>").text(JSON.stringify(data[i].content)));
             }
         });
