controller fixes, templates added

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"><head>
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
     <meta charset="UTF-8">
     <title>Home</title>
 </head>
 <body>
-    <h1>Ayo whaddup cuz</h1>
+<h1>Ayo whaddup cuz</h1>
 
-    <a th:href="@{/timeline}" href="#">Click me to see what people are saying</a>
+<a th:href="@{/timeline}" href="#">Click me to see what people are saying</a>
 </body>
 </html>
