--- a/src/main/resources/templates/comments.html
+++ b/src/main/resources/templates/comments.html
@@ -6,35 +6,67 @@
     <script src="http://code.jquery.com/jquery-2.2.4.js"
             type="text/javascript"></script>
     <script src="/js/common.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <meta charset="UTF-8">
     <title>Comments</title>
 </head>
 <body>
-<h1>Posts</h1>
-<form>
-    <p>
-        <br />
-        <textarea name="text_comment" cols="65" rows="6"></textarea>
-    </p>
-    <p>
-        <input type="submit" value="Отправить" />
-    </p>
-</form>
-<div id="getComments">
+<h1>Комментарии</h1>
+<form method="POST" id = "comment_form">
+    <div class="form-group">
 
+        <textarea name = "comment_content" id = "comment_content" class = "form-control" rows = "5" placeholder="Введите комментарий"></textarea>
+    </div>
+    <div class="form-group">
+        <input type="hidden" name="comment_id" id="comment_id" value="null"/>
+        <input type="submit" name = "submit" id = "submit" class = "btn btn-info" value="Отправить"/>
+    </div>
+</form>
+<span id = "comment_message"></span>
+<br/>
+<div id="getComments">
 </div>
 <script>
     var postId = 1;
-
+    var $container = $("#getComments");
     $(function() {
         ajaxWrapper("/comments/getComments", "GET", {post_id : postId}, function(data) {
-            var $container = $("#getComments");
-            for (var i in data) {
-                $container.append($("<p></p>").text(JSON.stringify(data[i].user.name.toString())));
-                $container.append($("<p></p>").text(JSON.stringify(data[i].content)));
-            }
+            showComments(data);
+        });
+
+        $("#comment_form").on("submit", function (event) {
+            //ajaxWrapper("/comments/addComment", "POST", {post_id : postId}, function(data) {
+            //    showComments(data);
+            //});
+            event.preventDefault();
+           alert("Комментарий отправлен");
+        });
+
+        $(document).on("click", ".reply", function () {
+            var comment_id = $(this).attr("id");
+            $("#comment_id").val(comment_id);
+            $("#comment_name").focus();
         });
     });
+
+    function showComments(data) {
+        for (var i in data) {
+            var marginLeft = 0;
+            if (data[i].parent != null) {
+                marginLeft = 48;
+            }
+            $container.append($("<div class = \"panel panel-default\"style=\"margin-left: "+marginLeft+"px\"></div>").
+            append("<div class = \"panel-heading\">" + data[i].userName + "</div>").
+            append("<div class = \"panel-body\">" + data[i].content + "</div>").
+            append($("<div class = \"panel-footer\" align=\"right\"></div>").
+            append("<button type=\"button\" class = \"btn btn-default reply\" id = \""+ data[i].id +"\">Ответить</button>")));
+            //$container.append("</div>");
+            if (data[i].children.length != 0) {
+                showComments(data[i].children);
+            }
+        }
+    }
 </script>
 </body>
 </html>
