--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,6 @@
 <body>
 <h1>Ayo whaddup cuz</h1>
 
-<a th:href="@{/timeline}" href="#">Click me to see what people are saying</a>
+<a th:href="@{/posts}" href="#">Click me to see what people are saying</a>
 </body>
 </html>
