--- a/src/main/resources/templates/comments.html
+++ b/src/main/resources/templates/comments.html
@@ -26,6 +26,7 @@
     <div class="form-group">
         <input type="hidden" name="comment_id" id="comment_id" value="null"/>
         <input type="submit" name = "submit" id = "submit" class = "btn btn-info" value="Отправить"/>
+        <input type="button" name = "showComments" id = "showComments" class = "btn btn-info showComments" value="Показать комментарии"/>
     </div>
 </form>
 <span id = "comment_message"></span>
