добавил редактирование юзера (удаление, изменения пароля и имени)

--- a/src/main/resources/templates/settings.html
+++ b/src/main/resources/templates/settings.html
@@ -2,17 +2,11 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Settings</title>
+    <title>settings</title>
 </head>
 <body>
-<form action="/setpassword">
-    <button type="submit">setings</button>
-</form>
-<form action="/setname">
-    <button type="submit">setings</button>
-</form>
-<form action="/delete">
-    <button type="submit">setings</button>
-</form>
+    <a href="/update"><button>изменить</button></a>
+    <a href="/delete"><button>удалить</button></a>
+
 </body>
 </html>
