--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -9,8 +9,8 @@
 <p th:text="${user.getEmail()}" /><br>
 <p th:text="${user.getName()}" /><br>
 <p th:text="${user.getPassword()}" /><br>
-<form action="/setings">
-    <button type="submit">setings</button>
+<form action="/settings">
+    <button type="submit">settings</button>
 </form>
 </body>
 </html>
