Обновил мапинг с постами

--- a/src/main/resources/templates/comments.html
+++ b/src/main/resources/templates/comments.html
@@ -6,6 +6,7 @@
     <script src="http://code.jquery.com/jquery-2.2.4.js"
             type="text/javascript"></script>
     <script src="/js/common.js"></script>
+    <script src="/js/comments.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <meta charset="UTF-8">
@@ -18,14 +19,13 @@
 </head>
 <body>
 <h1>Комментарии</h1>
-<form id = "post_form">
-    <div class="form-group">
-        <input type="button" name = "showComments" id = "1" class = "btn btn-info showComments" value="Показать комментарии"/>
-    </div>
-</form>
+<input type="button" name = "showComments" id = "1" class = "btn btn-info showComments" value="Показать комментарии"/>
 <br/>
 <div id="root_comments_1">
-    <script src="/js/comments.js"></script>
+</div>
+<input type="button" name = "showComments" id = "2" class = "btn btn-info showComments" value="Показать комментарии"/>
+<br/>
+<div id="root_comments_2">
 </div>
 </body>
 </html>
