--- a/src/main/resources/templates/fragments/postForm.html
+++ b/src/main/resources/templates/fragments/postForm.html
@@ -11,7 +11,7 @@
 	<div class="media-body">
 		<div class="form-group">
 			<textarea class="form-control" id="postContent" placeholder="Type something..." rows="3"></textarea>
-			<button type="button" id="createPost" class="btn btn-outline-primary">Post</button>
+			<button type="button" id="createPost" class="btn btn-outline-primary mt-2">Post</button>
 		</div>
 	</div>
 </div>
